--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource-variable/dm-sans": "^5.1.0",
     "@fontsource-variable/inter": "^5.1.0",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.9",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
